--- a/sam.yaml
+++ b/sam.yaml
@@ -13,7 +13,7 @@ Resources:
     Type: 'AWS::Serverless::Function'
     Properties:
       FunctionName: 'SSMParameterAccess'
-      Handler: aws-ssm-access
+      Handler: aws-ssm-parameter-access
       Runtime: go1.x
       CodeUri: .
       Tracing: Active
